prueba variables entorno netlify

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,7 +59,7 @@ const { title } = Astro.props;
     background-image: var(--gradient-15);
     padding: 2em;
     margin: 0 auto;
-    height: 80dvh;
+    min-height: 100dvh;
     width: min(100%, 60em);
     display: flex;
     flex-direction: column;
