Cambios css para netlify

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -35,7 +35,8 @@ const { img, title, content, btn_text, link } = Astro.props;
   }
 
   h2 {
-    color: var(--cyan-4);
+    font-size: 2.5em;
+    color: rgb(57, 221, 233);
   }
   a {
     width: fit-content;
