--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,12 @@ const { title } = Astro.props;
       monospace;
   }
   body {
-    background-image: var(--gradient-15);
+    background-image: linear-gradient(
+      to bottom right,
+      #c7d2fe,
+      #fecaca,
+      #fef3c7
+    );
     padding: 2em;
     margin: 0 auto;
     min-height: 100dvh;
