[ADD] - Inicio web scrapping cheerio

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import { ViewTransitions } from "astro:transitions";
+
 interface Props {
   title: string;
 }
@@ -16,60 +18,60 @@ const { title } = Astro.props;
     <link rel="stylesheet" href="/src/styles/global.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
   <body>
     <slot />
-  </body>
+  </body><style is:global>
+    :root {
+      --accent: rgb(136, 58, 234);
+      --accent-light: rgb(48, 201, 207);
+      --accent-dark: rgb(49, 10, 101);
+      --accent-gradient: linear-gradient(
+        45deg,
+        var(--accent),
+        var(--accent-light) 100%
+      );
+    }
+    *,
+    *::before,
+    *::after {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    html {
+      font-family: system-ui, sans-serif;
+      background: #13151a;
+      background-size: 224px;
+    }
+    code {
+      font-family:
+        Menlo,
+        Monaco,
+        Lucida Console,
+        Liberation Mono,
+        DejaVu Sans Mono,
+        Bitstream Vera Sans Mono,
+        Courier New,
+        monospace;
+    }
+    body {
+      background-image: linear-gradient(
+        to bottom right,
+        #c7d2fe,
+        #fecaca,
+        #fef3c7
+      );
+      padding: 2em;
+      margin: 0 auto;
+      min-height: 100dvh;
+      width: min(100%, 60em);
+      display: flex;
+      flex-direction: column;
+      place-content: start;
+      place-items: center;
+      gap: 2em;
+    }
+  </style>
 </html>
-<style is:global>
-  :root {
-    --accent: rgb(136, 58, 234);
-    --accent-light: rgb(48, 201, 207);
-    --accent-dark: rgb(49, 10, 101);
-    --accent-gradient: linear-gradient(
-      45deg,
-      var(--accent),
-      var(--accent-light) 100%
-    );
-  }
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
-  body {
-    background-image: linear-gradient(
-      to bottom right,
-      #c7d2fe,
-      #fecaca,
-      #fef3c7
-    );
-    padding: 2em;
-    margin: 0 auto;
-    min-height: 100dvh;
-    width: min(100%, 60em);
-    display: flex;
-    flex-direction: column;
-    place-content: start;
-    place-items: center;
-    gap: 2em;
-  }
-</style>
