--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,38 @@
 ---
+import dotenv from "dotenv";
+dotenv.config();
+import { Client } from "@notionhq/client";
+import { getDatabaseData } from "../services/notionApi";
+
+const { NOTION_API_KEY, NOTION_DB_ID } = process.env;
+
+const NOTION_CLIENT = new Client({ auth: NOTION_API_KEY });
+
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+
+const { results } = await getDatabaseData(NOTION_CLIENT, NOTION_DB_ID);
+console.log(results);
+const articles = JSON.stringify(results);
 ---
 
 <Layout title="Notion CMS">
   <h1>Welcome to <span class="text-gradient">Notion CMS</span></h1>
-  <main class="container">
-    <a href="/notion-cms">Notion CMS</a>
-    <a href="/scrape">Scrape</a>
+  <main class="card-container">
+    {
+      results.map((card) => {
+        return (
+          //{card.properties.Nombre.title[0].text.content}
+          <Card
+            title={card.properties.Name.title[0].text.content}
+            content={card.properties.Content.rich_text[0].text.content}
+            img={card.properties.Image.files[0].external.url}
+            btn_text={card.properties.Btn_text.rich_text[0].text.content}
+            link={card.properties.Link.url}
+          />
+        );
+      })
+    }
   </main>
   <style>
     h1 {
@@ -22,11 +47,11 @@ import Card from "../components/Card.astro";
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-    main.container {
+    main.card-container {
       width: 100%;
-      display: flex;
-      place-content: space-evenly;
-      place-items: center;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
+      gap: clamp(1.5rem, 3vw, 2rem);
     }
   </style>
 </Layout>
